# miniaudioNet

./: .gitignore  AGENTS.md  Directory.Build.props  README.md  miniaudioNet.sln
.github/workflows/: ci.yml  publish.yml
docs/: README.md  api-usage.md  native-build.md  overview.md  troubleshooting.md
native/: CMakeLists.txt  CMakePresets.json  manet_bridge.c
samples/MiniaudioNet.Sample/: MiniaudioNet.Sample.csproj  Program.cs
samples/MiniaudioNet.Sample.DeviceIO/: Program.cs
samples/MiniaudioNet.Sample.EngineControl/: Program.cs
samples/MiniaudioNet.Sample.Sine441/: Program.cs
samples/MiniaudioNet.Sample.Streaming/: MiniaudioNet.Sample.Streaming.csproj  Program.cs
scripts/: build-native.ps1  build-native.sh
src/Miniaudio.Net/: AssemblyInfo.cs  Miniaudio.Net.csproj  MiniaudioBackend.cs  MiniaudioCaptureDataEventArgs.cs  MiniaudioCaptureDevice.cs  MiniaudioCaptureDeviceOptions.cs  MiniaudioContext.cs  MiniaudioDeviceInfo.cs  MiniaudioDeviceKind.cs  MiniaudioEngine.cs  MiniaudioEngineOptions.cs  MiniaudioException.cs  MiniaudioResourceManager.cs  MiniaudioResourceManagerOptions.cs  MiniaudioResultExtensions.cs  MiniaudioSampleFormat.cs  MiniaudioSound.cs  MiniaudioStreamingSound.cs  ResourceManagerFlags.cs  SoundInitFlags.cs  SoundPositioning.cs  SoundState.cs
tests/Miniaudio.Net.Tests/: EnumTests.cs  ListenerConeTests.cs  Miniaudio.Net.Tests.csproj  MiniaudioCaptureDataEventArgsTests.cs  MiniaudioCaptureDeviceOptionsTests.cs  MiniaudioDeviceInfoTests.cs  MiniaudioEngineOptionsTests.cs  MiniaudioExceptionTests.cs  MiniaudioResourceManagerOptionsTests.cs
(+6 files in other folders)
